--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
   <title>Unicórnios são de Verdade</title>
+  <meta charset="UTF-8">
+  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
